java-maven-sonar-argocd-helm-k8s/spring-boot-app/sonarqube_ec2-main/security.tf
resource "aws_default_vpc" "default" {

}

resource "aws_security_group" "ec2" {
  name        = "allow_sonar_us_east_1"
  description = "Allow sonar outbound traffic"

  vpc_id = aws_default_vpc.default.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "allow_sonar"
  }
}
